--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Change Log
 ==========
+Version 1.2-3
+* Change memset namespace from cstring (C) to std (C++) to accomodate to Solaris builds
+
 Version 1.2-2
 * Fix 1 bug causing 'segfault' on OS X platform
 
